# Mandelbrot

./: .CMakeLists.txt.swp  .gitignore  .mandelbrot.c.swp  .ycm_extra_conf.py  :w  CMakeLists.txt  Makefile  bigint.asm  bigint.c  bigint.h  bitset.c  bitset.h  boundary.c  boundary.h  color.c  color.h  constants.h  debugLaunch.sh  fixedpoint.c  fixedpoint.h  floatingpoint.c  floatingpoint.h  gpu.cpp  gpu.h  image.c  image.h  interactive.cpp  interactive.h  kernels.c  kernels.h  launch.sh  main.c  mandelbrot.c  mandelbrot.cpp  mandelbrot.h  out.txt  precision.c  precision.h  routines.asm  routinesLinux.asm  (+8 more)
imgui/: imgui_impl_sdl.cpp
xcode/: CMakeCache.txt  cmake_install.cmake
xcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel
xcode/Debug/: Mandelbrot
xcode/Mandelbrot.build/Debug/Mandelbrot.build/: dgph
xcode/Mandelbrot.build/Debug/Mandelbrot.build/Objects-normal/x86_64/: Mandelbrot.LinkFileList  lodepng.d  mandelbrot.d
xcode/Mandelbrot.build/Debug/ZERO_CHECK.build/: Script-84D70CE879EF4F97A0972C62.sh  dgph
xcode/Mandelbrot.xcodeproj/: project.pbxproj
xcode/Mandelbrot.xcodeproj/project.xcworkspace/xcuserdata/Brian.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/Mandelbrot.xcodeproj/xcuserdata/Brian.xcuserdatad/xcschemes/: ALL_BUILD.xcscheme  Mandelbrot.xcscheme  ZERO_CHECK.xcscheme  xcschememanagement.plist
